crates/llvmkit-ir/tests/compile_fail/default_pipeline_o2_not_supported.rs
fn main() {
    let _ = llvmkit_ir::default_pipeline::<llvmkit_ir::OptLevelO2>();
}
